--- a/citas.html
+++ b/citas.html
@@ -26,7 +26,7 @@
     <main>
 
         <div class="container">
-            <h1>Lo que siento por mi ti, Amor❤</h1>
+            <h1>Lo que siento por ti, Amor❤</h1>
             <section id="citas">
                 <button id="mostrar-frases">Apriete muchas veces aqui Amor❤</button>
                 <div id="frase-container">
