--- a/citas.html
+++ b/citas.html
@@ -18,7 +18,7 @@
             <a href="index.html" class="brand">INICIO</a>
             <ul class="nav-links">
                 <li><a href="poemas.html">POEMA</a></li>
-                <li><a href="citas.html">PALABRAS</a></li>
+                <li><a href="citas.html">CITAS</a></li>
             </ul>
         </nav>
         <button class="button-menu-toggle">Menu</button>
